# llm-eval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: classification.yaml  extraction.yaml  extraction_hard.yaml  judge_demo.yaml  reasoning.yaml  smoke.yaml
src/llm_eval/: cli.py  html.py  metrics.py  report.py  report_cli.py  runner.py
src/llm_eval/graders/: __init__.py  judge.py
src/llm_eval/providers/: __init__.py  base.py  claude.py  mock.py  ollama.py
tests/: test_graders.py  test_html.py  test_judge.py  test_runner.py
