[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval"
version = "0.1.0"
description = "Compare LLMs on the same tasks: accuracy, cost, latency."
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]

[project.scripts]
llm-eval = "llm_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
